# dark-research-lab

./: .gitignore  AGENTS.md  LICENSE  README.md  hatch_build.py  infinity-loop.sh  pipeline.sh  polish-loop.sh  pyproject.toml
.beads/: .beads-credential-key  .gitignore  loop-session-name  metadata.json
.claude/: .ca-phase-state 2.json  .gitignore  CLAUDE.md  plugin.json  settings.json
.claude/agents/compound/: research-specialist.md
.claude/agents/drl/: coherence-reviewer.md  literature-analyst.md  methodology-reviewer.md  robustness-checker.md  writing-quality-reviewer.md
.claude/commands/compound/: agentic-audit.md  agentic-setup.md  architect.md  build-great-things.md  launch-loop.md  plan.md  research.md  spec-dev.md  test-clean.md  work.md
.claude/commands/drl/: cook-it.md  decision.md  lit-review.md  status.md
.claude/lessons/: index.jsonl
agent_logs/: .latest  .loop-status.json  .polish-status.json  trace_dark-research-lab-q1f-2026-04-03_11-14-26.jsonl
agent_logs/polish-cycle-1/: audit-prompt.md
agent_logs/polish-cycle-2/: audit-prompt.md  codex-report.md
docs/compound/: CLI_REFERENCE.md  INTEGRATION.md  README.md  SKILLS.md  WORKFLOW.md
docs/decisions/: 0000-template.md  0001-paper-src-standalone-before-embedding.md  0002-pymupdf-for-pdf-extraction.md  0003-thin-wrapper-command-pattern.md  0004-contract-test-strategy.md  0005-repro-manifest-completeness.md  0006-scaffolding-as-embedded-templates.md
docs/drl/: CLI_REFERENCE.md  INTEGRATION.md  ONBOARDING.md  README.md  SKILLS.md  WORKFLOW.md
docs/drl/research/: index.md
docs/exploration/: SYNTHESIS.md
docs/specs/: drl-content-migration.md  drl-package-advisory-brief.md  drl-package.md  polish-report-cycle-1.md  polish-report-cycle-2.md  polish-report-cycle-3.md  template-migration-advisory-brief.md  template-migration.md
drltmp/: AGENTS.md
drltmp/.claude/: .gitignore  CLAUDE.md  plugin.json
drltmp/docs/compound/: CLI_REFERENCE.md  INTEGRATION.md  README.md  SKILLS.md  WORKFLOW.md
go/: .golangci.yml  Makefile  go.mod
go/.claude/.cache/: lessons.sqlite
go/.claude/lessons/: index.jsonl
go/cmd/drl/: main.go
go/internal/capture/: quality.go  quality_test.go  triggers.go  triggers_test.go
go/internal/cli/: benchmark_test.go  commands.go  commands_advanced.go  commands_advanced_test.go  commands_capture.go  commands_capture_test.go  commands_crud.go  commands_crud_test.go  commands_health.go  commands_health_test.go  commands_info.go  commands_info_test.go  commands_knowledge.go  commands_knowledge_test.go  commands_literature.go  commands_maintenance.go  commands_maintenance_test.go  commands_migrate.go  commands_migrate_test.go  commands_phase.go  commands_phase_test.go  commands_polish_epic_test.go  commands_scripts.go  commands_scripts_improve.go  commands_scripts_improve_test.go  commands_scripts_polish.go  commands_scripts_polish_test.go  commands_scripts_review.go  commands_scripts_review_test.go  commands_scripts_test.go  commands_setup.go  commands_setup_test.go  commands_test.go  commands_verify_gates.go  commands_verify_gates_test.go  cross_epic_integration_test.go  integration_test.go
go/internal/compound/: compound.go  compound_test.go
go/internal/contracts/: windows_integration_test.go
go/internal/embed/: client.go  client_test.go  daemon_unix.go  daemon_windows.go  daemon_windows_test.go  flock_unix.go  (+9 more)
paper/: Ref.bib  compile.sh  main.tex
paper/sections/: conclusion.tex  data.tex  intro.tex  literature.tex  methodology.tex  results.tex  robustness.tex
python/drl/: __init__.py  __main__.py
scripts/: build.sh
scripts/hooks/: decision-reminder.sh
src/: config.py
src/analysis/: descriptive.py  econometrics.py  robustness.py
src/data/: cleaners.py  loaders.py
src/literature/: extract.py  summarize.py
src/orchestrators/: __init__.py  repro.py
src/visualization/: plots.py
tests/: conftest.py  test_config.py  test_epic5_research_skills.py  test_epic6_agents_architect.py  test_epic7_commands_flavor_onboard.py  test_epic_a0f_handoff_gates.py  test_epic_d3m_polish.py  test_integration_cross_epic.py  test_literature.py  test_literature_integration.py  test_paper_scaffold.py  test_repro_package.py  test_smoke.py  test_src_scaffold.py  test_workflow_infra.py  test_wrapper.py
(+341 files in other folders)
