[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl"
version = "0.1.0"
description = "Dark Research Lab - autonomous research paper factory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nathan Delacretaz" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pymupdf>=1.24.0",
    "polars>=1.0.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
drl = "drl:main"

[dependency-groups]
test = ["pytest", "pyyaml"]

[tool.hatch.build.targets.wheel]
packages = ["python/drl"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
